# gnome-x11-gesture-daemon

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  gesture_improvements_gesture_daemon.service  install.sh  uninstall.sh
.github/workflows/: prerelease.yaml  release.yaml
src/: libinput.rs  main.rs
