[package]
name = "gesture_improvements_gesture_daemon"
version = "0.1.0"
authors = ["Harshad Gavali <harshadgavali@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = "0.7"
libc = "0.2.98"
zbus = "1.9"
zvariant = "2.7.0"
serde = "1.0.126"