[package]
name = "gesture_improvements_gesture_daemon"
version = "0.2.1"
authors = ["Harshad Gavali <harshadgavali@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = "0.7"
libc = "0.2.107"
zbus = "1.9"
zvariant = "3.7"
serde = "1.0.130"
